--- a/Joakim/12.html
+++ b/Joakim/12.html
@@ -10,66 +10,68 @@
     <!--<div id="info">test</div>-->
     <script>
 
-        //sjekkogreturner();
         taInnverdier();
         tilfeldigSkrift();
-        //randomVokal();
-        //randomKonsonant();
+
 
         function tilfeldigSkrift() {
             var liste = taInnverdier();
-            //var vokal = randomVokal();
-            //var vokal = randomVokal();
-            //var konsonant = randomKonsonant();
-             var divHtml = '<div>' + liste + '</div>';
-        //document.getElementById('info').innerHTML = divHtml.innerTXT;
+            var divHtml = '<div>' + liste + '</div>';
             document.write(divHtml);
-}
+        }
+
         function taInnverdier() {
-            var randomKonsonant = sjekkogreturner('randomKonsonant');
-            var randomVokal = sjekkogreturner('randomVokal');
-            var liste = [sjekkogreturner() , sjekkogreturner() , sjekkogreturner() , sjekkogreturner() , sjekkogreturner()];
+            var liste = sjekkOgReturner();
             return liste;
 
         }
 
-        function sjekkogreturner() {
-            //var teller = 0;
-            var randomKonsonant = randomKonsonant();
-            var randomVokal = randomVokal();
-            for (var teller = 0; teller >= 4;){
-                if (teller == 0 || 2 || 4) {
-                    return randomKonsonant;
+        function sjekkOgReturner() {
+            var tekst = '';
+   
+            for (teller = 0; teller <= 4; teller++) {
+                if (teller == 0 || teller == 2 || teller == 4) {
+                    tekst += randomKonsonant();
                 }
-                if (teller == 1 || 3) {
-                    return randomVokal;
+                if (teller == 1 || teller == 3) {
+                    tekst += randomVokal();
                 }
-
             }
-             teller++;
+            return tekst;
         }
-         function randomVokal() {
-                var tall = tilfeldigTall(0, 25);
-                if (tall == 0 || tall == 4 || tall == 8 || tall == 14 || tall == 20 || tall == 24) {
-                    return String.fromCharCode(tall + 'a'.charCodeAt(0));
-                }
-                else {
-                    randomVokal();
-                }
-         }
-            function randomKonsonant() {
-                var tall = tilfeldigTall(0, 25);
-                if (tall == 0 || tall == 4 || tall == 8 || tall == 14 || tall == 20 || tall == 24) {
-                    randomKonsonant();
-                }
-                else {
-                    return String.fromCharCode(tall + 'a'.charCodeAt(0));
-                }
-            }
-            function tilfeldigTall(minimum, maksimum) {
-                return minimum + Math.floor(Math.random() * (maksimum - minimum + 1));
+
+
+        function randomVokal() {
+            var tall = tilfeldigTall(0, 25);
+
+            while (tall != 0 && tall != 4 && tall != 8 && tall != 14 && tall != 20 && tall != 24) {
+                tall = tilfeldigTall(0, 25);
             }
 
-</script>
+            return String.fromCharCode(tall + 'a'.charCodeAt(0));
+        }
+
+
+        function randomKonsonant() {
+            var tall = tilfeldigTall(0, 25);
+
+            while (tall == 0 || tall == 4 || tall == 8 || tall == 14 || tall == 20 || tall == 24) {
+                tall = tilfeldigTall(0, 25);
+            }
+
+            return String.fromCharCode(tall + 'a'.charCodeAt(0));
+
+        }
+
+
+        function tilfeldigTall(minimum, maksimum) {
+            return minimum + Math.floor(Math.random() * (maksimum - minimum + 1));
+        }
+
+    </script>
+
+
+
+
 </body>
 </html>
