--- a/LT/Uke 5/NumberPuzzle.html
+++ b/LT/Uke 5/NumberPuzzle.html
@@ -1,69 +1,103 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Søke Start IT</title>
+    <meta charset="utf-8" />
+    <title>Numberpuzzle</title>
     <style>
-        div {
-            color: blue;
-            background-color: azure;
+        p.errorMessage {
+            color: red;
+        }
+
+        div.clickNumber {
+            clear: left;
+        }
+
+        div.rows {
+            color: black;
+            background-color: #FE67EB;
             padding: 10px;
             margin: 10px;
-            border: solid cornflowerblue 5px;
-            width: 20px;
-            height: 20px;
+            border: solid #BF00BF 2px;
+            width: 30px;
+            height: 30px;
             float: left;
         }
-            div.førstPåLinja {
-                clear: left;
-            }
+
+        div.førstPåLinje {
+            clear: left;
+        }
     </style>
 </head>
+
 <body>
-    <div id="r1k1" onclick="trykk(this, 'r2k1', 'r1k2', '_', '_')">7</div>
-    <div id="r1k2" onclick="trykk(this, 'r1k1', 'r2k2','r1k3')">1</div>
-    <div id="r1k3" onclick="trykk(this, 'r1k2', 'r2k3')">2</div>
-    <div id="r2k1" class="førstPåLinja" onclick="trykk(this, 'r2k2', 'r1k1', 'r3k1')">5</div>
-    <div id="r2k2" onclick="trykk(this, 'r2k1','r1k2','r2k3','r3k2')"></div>
-    <div id="r2k3" onclick="trykk(this, 'r1k3','r2k2','r3k3')">3</div>
-    <div id="r3k1" class="førstPåLinja" onclick="trykk(this, 'r2k1','r3k2' )">8</div>
-    <div id="r3k2" onclick="trykk(this, 'r3k1', 'r2k2', 'r3k3')">4</div>
-    <div id="r3k3" onclick="trykk(this, 'r3k2', 'r2k3' )">6</div>
+    <div id="numbers">
+
+    </div>
+
     <script>
+        let puzzle = {
+            numbers:  [
+                { number: 7, isBlank: false },
+                { number: 1, isBlank: false },
+                { number: 2, isBlank: false },
+                { number: 5, isBlank: false },
+                { isBlank: true },
+                { number: 3, isBlank: false },
+                { number: 8, isBlank: false },
+                { number: 4, isBlank: false },
+                { number: 6, isBlank: false }
+            ],
+            count: 0
+        };
 
-show();
-    function show() {
-        let html = `
-        <div id="r1k1" onclick="trykk(this, 'r2k1', 'r1k2', '_', '_')">7</div>
-    <div id="r1k2" onclick="trykk(this, 'r1k1', 'r2k2','r1k3')">1</div>
-    <div id="r1k3" onclick="trykk(this, 'r1k2', 'r2k3')">2</div>
-    <div id="r2k1" class="førstPåLinja" onclick="trykk(this, 'r2k2', 'r1k1', 'r3k1')">5</div>
-    <div id="r2k2" onclick="trykk(this, 'r2k1','r1k2','r2k3','r3k2')"></div>
-    <div id="r2k3" onclick="trykk(this, 'r1k3','r2k2','r3k3')">3</div>
-    <div id="r3k1" class="førstPåLinja" onclick="trykk(this, 'r2k1','r3k2' )">8</div>
-    <div id="r3k2" onclick="trykk(this, 'r3k1', 'r2k2', 'r3k3')">4</div>
-    <div id="r3k3" onclick="trykk(this, 'r3k2', 'r2k3' )">6</div>`
 
+        show();
+        function show() {
+            let html = '';
+            for (let i = 0; i < puzzle.numbers.length; i++) {
+                let numberObj = puzzle.numbers[i];
+                let numberText = numberObj.isBlank ? '' : numberObj.number;
 
-        function trykk(tagElement, alt1, alt2, alt3, alt4) {
-            if (document.getElementById(alt1).innerHTML == '') {
-                document.getElementById(alt1).innerHTML = tagElement.innerHTML;
-                tagElement.innerHTML = '';
+                let firstInLine = i % 3 == 0 ? 'førstPåLinje' : '';
+                html +=
+                    `<div class="rows ${firstInLine}"
+                       onclick="clickedNumber(${i});"
+                       >${numberText}</div>`;
             }
-            if (document.getElementById(alt2).innerHTML == '') {
-                document.getElementById(alt2).innerHTML = tagElement.innerHTML;
-                tagElement.innerHTML = '';
-            }
-            if (document.getElementById(alt3).innerHTML == '') {
-                document.getElementById(alt3).innerHTML = tagElement.innerHTML;
-                tagElement.innerHTML = '';
-            }
-            if (document.getElementById(alt4).innerHTML == '') {
-                document.getElementById(alt4).innerHTML = tagElement.innerHTML;
-                tagElement.innerHTML = '';
-            }
+            html += `<div style="clear: both;">Antall trekk: ${puzzle.count}</div>`;
+            document.getElementById('numbers').innerHTML = html;
+
         }
+        function clickedNumber(index) {
+            puzzle.count++;
+            let blankIndex = findBlankIndex(index);
+            if (blankIndex == null) return;
+
+            puzzle.numbers[blankIndex].number = puzzle.numbers[index].number;
+            puzzle.numbers[blankIndex].isBlank = false;
+            puzzle.numbers[index].isBlank = true;
+            delete puzzle.numbers[index].number;
+            show();
+        }
+       function errorMessage() {
+        let (blankIndex == false); {
+      alert('Du må trykke på tom rute!')
+        }
+       }
+        function findBlankIndex(index) {
+            for (let delta of [-3, -1, 1, 3]) {
+                let newIndex = index + delta;
+                if (newIndex < 0 || newIndex >= puzzle.numbers.length) continue;
+                if (puzzle.numbers[newIndex].isBlank) {
+                    return newIndex;
+                }
+            }
+            return null;
+        }
+
+
     </script>
 </body>
+
 </html>
