--- a/LT/Oblig2.html
+++ b/LT/Oblig2.html
@@ -4,10 +4,45 @@
 <title>Oblig2</title>
             
 <style>
+            body {
+            user-select: none;
+            background-color: cornflowerblue;
+        }
     /* lager rammen rundt stolpe som er valgt */
 .border {
     stroke:black;
     stroke-width:0.5px;
+}
+button[disabled] {
+    background-color: rgb(42, 75, 184);
+    cursor:not-allowed !important;
+}
+button {
+    background-color: rgb(42, 75, 184);
+    border-radius: 4px;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button {
+            opacity: 1;
+        }
+        input[type=number] {
+            border-radius: 4px;
+            border: solid rgb(42, 75, 184);
+            padding: 12px 10px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+#chosenBar {
+    padding: 10px;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
 }
 </style>
 </head>
