--- a/LT/Uke 6/yatzy.html
+++ b/LT/Uke 6/yatzy.html
@@ -43,7 +43,7 @@
         showBoard();
         function showBoard() {
             const data = [
-                { label: { txt: '', underline: 'underline' }, score: ['Martin', 'Joakim', 'LT'] },
+                { label: { txt: '', underline: 'underline' }, score: ['LT', '', '']  },
                 { label: { txt: 'Enere' } },
                 { label: { txt: 'Toere' } },
                 { label: { txt: 'Treere' } },
