--- a/LT/Uke 6/yatzy.html
+++ b/LT/Uke 6/yatzy.html
@@ -1,89 +1,455 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>Yatzy</title>
-    <style>
-        body {
-            font-family: helvetica;
-            background-color: cadetblue;
-        }
-        h1 {
-            font-family: helvetica;
-            font-size: 50px;
-        }
-        table {
-            border: 2px solid black;
-            border-collapse: collapse;
-            background-color: white;
-        }
-        tr, td, th {
-            border: 1px solid black;
-            border-collapse: collapse;
-            min-width: 50px;
-            padding: 4px;
-            height: 18px;
-        }
-            tr.underline {
-                border-bottom: 2px solid black;
-            }
-            td.label {
-                min-width: 100px;
-            }
-            td.bold {
-                font-weight: bold;
-            }
-    </style>
+<meta charset="utf-8" />
+<title>Yatzy</title>
+<style>
+body {
+    font-family: helvetica;
+    background-color: cadetblue;
+}
+h1 {
+    font-family: helvetica;
+    font-size: 50px;
+}
+table {
+    border: 2px solid black;
+    border-collapse: collapse;
+    background-color: white;
+}
+tr, td, th {
+    border: 1px solid black;
+    border-collapse: collapse;
+    min-width: 50px;
+    padding: 4px;
+    height: 18px;
+}
+tr.underline {
+    border-bottom: 2px solid black;
+}
+td.label {
+    min-width: 100px;
+}
+td.bold {
+    font-weight: bold;
+}
+.diceHeld {
+    fill: lightsteelblue;
+}
+a {
+    color: black;
+    text-decoration: none;
+}
+</style>
 </head>
 <body>
-        <h1>Yatzy! </h1>
-    <div id="scoreboard"></div>
-    <script>
-        showBoard();
-        function showBoard() {
-            const data = [
-                { label: { txt: '', underline: 'underline' }, score: ['LT', '', '']  },
-                { label: { txt: 'Enere' } },
-                { label: { txt: 'Toere' } },
-                { label: { txt: 'Treere' } },
-                { label: { txt: 'Firere' } },
-                { label: { txt: 'Femere' } },
-                { label: { txt: 'Seksere', underline: 'underline' } },
-                { label: { txt: 'Sum' } },
-                { label: { txt: 'Bonus' } },
-                { label: { txt: '1 par' } },
-                { label: { txt: '2 par' } },
-                { label: { txt: '3 like' } },
-                { label: { txt: '4 like' } },
-                { label: { txt: 'Liten straight' } },
-                { label: { txt: 'Stor straight' } },
-                { label: { txt: 'Hus' } },
-                { label: { txt: 'Sjanse' } },
-                { label: { txt: 'Yatzy', underline: 'underline', bold: 'bold' } },
-                { label: { txt: 'Totalsum' } }
-            ];
-            for (let i = 1; i < data.length; i++) {
-                data[i].score = new Array(3);
-            }
-            data[11].score[2] = 18;
-            data[15].score[1] = 18;
-            let html = '<table>';
-            for (let i = 0; i < data.length; i++) {
-                const row = data[i];
-                const score = row.score;
-                html += `<tr class="${row.label.underline}">
-                                <td class="label ${row.label.bold}">
-                                    ${row.label.txt}
-                                </td>`;
-                for (let j = 0; j < score.length; j++) {
-                    html += `<td>${score[j] || '&nbsp;'}</td>`;
-                }
-                html += '</tr>';
-            }
-            html += '</table>';
-            document.getElementById('scoreboard').innerHTML = html;
+<h1>Yatzy! </h1>
+<p>
+<button onclick="throwDice()">Kast terningene!</button>
+</p>
+    <svg width="100" height="100" viewBox="0 0 140 140" onclick="toggleDice(0)">
+    <rect x="5" y="5" rx="20" ry="20" width="130" height="130" />
+    <circle cx="30" cy="30" r="13" />
+    <circle cx="110" cy="30" r="13" />
+    <circle cx="30" cy="70" r="13" />
+    <circle cx="70" cy="70" r="13" />
+    <circle cx="110" cy="70" r="13" />
+    <circle cx="30" cy="110" r="13" />
+    <circle cx="110" cy="110" r="13" />
+</svg>
+    <svg width="100" height="100" viewBox="0 0 140 140" onclick="toggleDice(1)">
+    <rect x="5" y="5" rx="20" ry="20" width="130" height="130" />
+    <circle cx="30" cy="30" r="13" />
+    <circle cx="110" cy="30" r="13" />
+    <circle cx="30" cy="70" r="13" />
+    <circle cx="70" cy="70" r="13" />
+    <circle cx="110" cy="70" r="13" />
+    <circle cx="30" cy="110" r="13" />
+    <circle cx="110" cy="110" r="13" />
+</svg>
+    <svg width="100" height="100" viewBox="0 0 140 140" onclick="toggleDice(2)">
+    <rect x="5" y="5" rx="20" ry="20" width="130" height="130" />
+    <circle cx="30" cy="30" r="13" />
+    <circle cx="110" cy="30" r="13" />
+    <circle cx="30" cy="70" r="13" />
+    <circle cx="70" cy="70" r="13" />
+    <circle cx="110" cy="70" r="13" />
+    <circle cx="30" cy="110" r="13" />
+    <circle cx="110" cy="110" r="13" />
+</svg>
+    <svg width="100" height="100" viewBox="0 0 140 140" onclick="toggleDice(3)">
+    <rect x="5" y="5" rx="20" ry="20" width="130" height="130" />
+    <circle cx="30" cy="30" r="13" />
+    <circle cx="110" cy="30" r="13" />
+    <circle cx="30" cy="70" r="13" />
+    <circle cx="70" cy="70" r="13" />
+    <circle cx="110" cy="70" r="13" />
+    <circle cx="30" cy="110" r="13" />
+    <circle cx="110" cy="110" r="13" />
+</svg>
+    <svg width="100" height="100" viewBox="0 0 140 140" onclick="toggleDice(4)">
+    <rect x="5" y="5" rx="20" ry="20" width="130" height="130" />
+    <circle cx="30" cy="30" r="13" />
+    <circle cx="110" cy="30" r="13" />
+    <circle cx="30" cy="70" r="13" />
+    <circle cx="70" cy="70" r="13" />
+    <circle cx="110" cy="70" r="13" />
+    <circle cx="30" cy="110" r="13" />
+    <circle cx="110" cy="110" r="13" />
+</svg>
+
+<table id="tblScoreBoard">
+<tr> 
+    <td></td>
+    <td>LT</td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultUpperSection(1)">Enere</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultUpperSection(2)">Toere</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultUpperSection(3)">Treere</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultUpperSection(4)">Firere</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultUpperSection(5)">Femere</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultUpperSection(6)">Seksere</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Sum</td>
+    <td></td>
+</tr>
+<tr>
+    <td>Bonus</td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultOnePair()">1 par</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultTwoPairs()">2 par</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultThreeOfAKind()">3 like</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultFourOfAKind()">4 like</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultSmallStraight()">Liten straight</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultLargeStraight()">Stor straight</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultFullHouse()">Hus</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="javascript:placeResultYatzy()">Yatzy</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Totalsum</td>
+    <td></td>
+</tr>
+</table>
+
+<script type="text/javascript">
+let allSvgs = document.getElementsByTagName('svg');
+let scoreBoardView = document.getElementsByTagName('table')[0];
+let scoreBoardModel = initScoreBoard();
+let diceModel = initDiceModel();
+showDice();
+showScoreBoard();
+
+function throwDice() {
+    if (diceModel.throwCount >= 3) return;
+    diceModel.throwCount++;
+
+    for (let i = 0; i < diceModel.dice.length; i++) {
+    if (!diceModel.dice[i].isHeld) {
+        diceModel.dice[i].value = Math.floor(Math.random() * 6) + 1;
+}
+}
+showDice();
+}
+function toggleDice(diceIndexo) {
+    if (diceModel.throwCount === 0) return;
+    diceModel[diceIndexo].isHeld = !diceModel.dice[diceIndexo].isHeld;
+    showDice();
+}
+function initDiceModel() {
+    let diceModel = {};
+    diceModel.dice = [
+        { value: 6, isHeld: false },
+        { value: 6, isHeld: false },
+        { value: 6, isHeld: false },
+        { value: 6, isHeld: false },
+        { value: 6, isHeld: false }
+    ];
+    diceModel.throwCount = 0;
+    return diceModel;
+}
+function showDice() {
+    showOneDice(0);
+    showOneDice(1);
+    showOneDice(2);
+    showOneDice(3);
+    showOneDice(4);
+}
+
+function showOneDice(diceIndex) {
+    let svg = allSvgs[diceIndex];
+    let valueToShow = diceModel.dice[diceIndex].value;
+    let isHeld = diceModel.dice[diceIndex].isHeld;
+    svg.classList.remove('diceHeld');
+    if (isHeld) svg.classList.add('diceHeld');
+    let circles = svg.getElementsByTagName('circle');
+
+    circles[0].style.display = valueToShow > 1 ? 'block' : 'none';
+    circles[1].style.display = valueToShow > 3 ? 'block' : 'none';
+    circles[2].style.display = valueToShow === 6 ? 'block' : 'none';
+    circles[3].style.display = valueToShow % 2 === 1 ? 'block' : 'none';
+    circles[4].style.display = valueToShow === 6 ? 'block' : 'none';
+    circles[5].style.display = valueToShow > 3 ? 'block' : 'none';
+    circles[6].style.display = valueToShow > 1 ? 'block' : 'none';
+}
+
+function showScoreBoard() {
+    scoreBoardView.rows[1].cells[1].innerText = scoreBoardModel.upperSection[1];
+    scoreBoardView.rows[2].cells[1].innerText = scoreBoardModel.upperSection[2];
+    scoreBoardView.rows[3].cells[1].innerText = scoreBoardModel.upperSection[3];
+    scoreBoardView.rows[4].cells[1].innerText = scoreBoardModel.upperSection[4];
+    scoreBoardView.rows[5].cells[1].innerText = scoreBoardModel.upperSection[5];
+    scoreBoardView.rows[6].cells[1].innerText = scoreBoardModel.upperSection[6];
+    scoreBoardView.rows[7].cells[1].innerText = scoreBoardModel.getSum();
+    scoreBoardView.rows[8].cells[1].innerText = scoreBoardModel.getBonus();
+    scoreBoardView.rows[9].cells[1].innerText = scoreBoardModel.onePair;
+    scoreBoardView.rows[10].cells[1].innerText = scoreBoardModel.twoPairs;
+    scoreBoardView.rows[11].cells[1].innerText = scoreBoardModel.threeOfAKind;
+    scoreBoardView.rows[12].cells[1].innerText = scoreBoardModel.fourOfAKind;
+    scoreBoardView.rows[13].cells[1].innerText = scoreBoardModel.smallStraight;
+    scoreBoardView.rows[14].cells[1].innerText = scoreBoardModel.largeStraight;
+    scoreBoardView.rows[15].cells[1].innerText = scoreBoardModel.fullHouse;
+    scoreBoardView.rows[16].cells[1].innerText = scoreBoardModel.chance;
+    scoreBoardView.rows[17].cells[1].innerText = scoreBoardModel.yatzy;
+    scoreBoardView.rows[18].cells[1].innerText = scoreBoardModel.getTotalSum();
+}
+
+function placeResultUpperSection(diceValue) {
+    if (diceModel.throwCount < 3
+    || scoreBoardModel.upperSection[diceValue] != null)
+    return;
+
+    let sum = 0;
+    for (let i = 0; i < diceModel.dice.length; i++) {
+        if (diceModel.dice[i].value === diceValue) {
+            sum += diceValue;
         }
-    </script>
+    }
+    scoreBoardModel.upperSection[diceValue] = sum;
+
+    resetDiceAndRefreshScoreboard();
+}
+
+function resetDiceAndRefreshScoreboard() {
+    diceModel.throwCount = 0;
+    for (let i = 0; i < diceModel.dice.length; i++) {
+        diceModel.dice[i].isHeld = false;
+    }
+    showDice();
+    showScoreBoard();
+}
+
+function placeResultYatzy() {
+    if (diceModel.throwCount < 3
+    || scoreBoardModel.yatzy != null)
+    return;
+    scoreBoardModel.yatzy = 
+    countNumberOfValues() === 1 ? 50 : 0;
+    resetDiceAndRefreshScoreboard();
+}
+
+function placeResultTwoPairs() {
+    let counts = getCounts();
+    let pairs = [];
+    for (let i = counts.length - 1; i >= 0; i--) {
+        if (counts[i] > 1) {
+            let diceValue = i + 1;
+            pairs.push(diceValue * 2);
+        }
+    }
+    scoreBoardModel.twoPairs = pairs.length >= 2 ? pairs[0] + pairs[1] : 0;
+    resetDiceAndRefreshScoreboard();
+}
+
+function placeResultThreeOfAKind() {
+            let counts = getCounts();
+            for (let i = counts.length - 1; i >= 0; i--) {
+                if (counts[i] > 2) {
+                    let diceValue = i + 1;
+                    scoreBoardModel.threeOfAKind = diceValue * 3;
+                    resetDiceAndRefreshScoreboard();
+                    return;
+                }
+            }
+            scoreBoardModel.threeOfAKind = 0;
+            resetDiceAndRefreshScoreboard();
+        }
+        function placeResultSmallStraight() {
+            let counts = getCounts();
+            //for (var i = 0; i < counts.length; i++) {
+            //    if (counts[i] > 1) {
+            //        scoreBoardModel.smallStraight = 0;
+            //        resetDiceAndRefreshScoreboard();
+            //        return;
+            //    }
+            //}
+            let countsLargerThanOne = counts.filter(
+                function (number) { return number > 1; });
+            scoreBoardModel.smallStraight =
+                countsLargerThanOne.length > 0
+                    ? 0
+                    : (counts[5] === 0 ? 15 : 0);
+            resetDiceAndRefreshScoreboard();
+        }
+        function placeResultOnePair() {
+            let counts = getCounts();
+            for (let i = counts.length - 1; i >= 0; i--) {
+                if (counts[i] > 1) {
+                    let diceValue = i + 1;
+                    scoreBoardModel.onePair = diceValue * 2;
+                    resetDiceAndRefreshScoreboard();
+                    return;
+                }
+            }
+            scoreBoardModel.onePair = 0;
+            resetDiceAndRefreshScoreboard();
+        }
+function placeResultLargeStraight() {
+    let counts = getCounts();
+    let countsLargerThanOne = counts.filter(
+    function (number) { return number > 1; });
+        scoreBoardModel.largeStraight =
+        countsLargerThanOne.length > 0
+        ? 0
+        : (counts[0] === 0 ? 21 : 0);
+        resetDiceAndRefreshScoreboard();
+}
+        function placeResultFullHouse() {
+            let counts = getCounts();
+            let countsLargerThanOne = counts.filter(
+                function (number) { return number > 1; });
+            countsLargerThanOne.sort();
+            let isFullHouse = countsLargerThanOne[0] === 2 && countsLargerThanOne[1] === 3;
+            scoreBoardModel.fullHouse = isFullHouse ? getSum() : 0;
+            resetDiceAndRefreshScoreboard();
+        }
+function placeResultFourOfAKind() {
+    if (diceModel.throwCount < 3
+        || scoreBoardModel.fourOfAKind != null)
+        return;
+
+let counts = getCounts();
+for (let i = 0; i < counts.length; i++) {
+    if (counts[i] >= 4) {
+        scoreBoardModel.fourOfAKind = (i + 1) * 4;
+        resetDiceAndRefreshScoreboard();
+        return;
+    }
+}
+scoreBoardModel.fourOfAKind = 0;
+resetDiceAndRefreshScoreboard();
+}
+
+function placeResultChance() {
+    scoreBoardModel.chance = getSum();
+    resetDiceAndRefreshScoreboard();
+}
+
+function getSum() {
+    let sum = 0;
+    for (let i = 0; i < diceModel.dice.length; i++) {
+        sum += diceModel.dice[i].value;
+    }
+    return sum;
+}
+function getCounts() {
+    let counts = [0, 0, 0, 0, 0, 0];
+    for (let i = 0; i < diceModel.dice.length; i++) {
+        counts[diceModel.dice[i].value - 1]++;
+}
+    return counts;
+}
+function countNumberOfValues() {
+    let counts = getCounts();
+    let NumberOfValues = 0;
+    for (let i = 0; i < counts.length; i++) {
+        if (counts[i] > 0) numberOfValues++;
+    }
+    return numberOfValues;
+}
+
+function initScoreBoard() {
+    let scoreBoard = {
+        getSum: function () {
+            let sum = 0;
+            for (let i = 1; i <= 6; i++)
+            sum += this.upperSection[i];
+            return sum; 
+        },
+        getBonus: function () { return this.getSum() >= 63 ? 50 : 0; },
+        getTotalSum: function () {
+            return this.getSum() +
+            this.getBonus() +
+            this.onePair +
+            this.threeOfAKind +
+            this.fourOfAKind +
+            this.smallStraight +
+            this.largeStraight +
+            this.fullHouse +
+            this.chance +
+            this.yatzy;
+        }
+    }
+    scoreBoard.upperSection = [
+        null,
+        null,
+        null,
+        null,
+        null,
+        null,
+        null];
+    scoreBoard.onePair = null;
+    scoreBoard.twoPairs = null;
+    scoreBoard.threeOfAKind = null;
+    scoreBoard.fourOfAKind = null;
+    scoreBoard.smallStraight = null;
+    scoreBoard.largeStraight = null;
+    scoreBoard.fullHouse = null;
+    scoreBoard.chance = null;
+    scoreBoard.yatzy = null;
+    return scoreBoard;
+}
+</script>
 </body>
 </html>
