--- a/LT/vinlotterix.html
+++ b/LT/vinlotterix.html
@@ -138,7 +138,7 @@ function showPersons() {
                   <td><input type="checkbox"
                   onclick="chooseAllOrNone(this.checked)"
                   ${addHtmlChecked(model.persons.chooseAll)}/></td>
-                  <td><b>Persons</b></td>
+                  <td><b>Personer</b></td>
                   <td>
                   <!--<button class="smallButton" onclick="editPersons()">✎</button>-->
                   </td>
