--- a/LT/uke 7/firebase.html
+++ b/LT/uke 7/firebase.html
@@ -38,9 +38,9 @@ let todoCollection = db.collection('todoItems');
         collectionSnapshot.forEach(
             function (todoItemSnapshot) {
                 let todoItem = todoItemSnapshot.data();
-                html += '<li>' + todoItem.todoText + ' (' + todoItem.todoDate + ')</li>';         
+                html += '<li>' + todoItem.todoText + ' (' + todoItem.todoDate.toDate() + ')</li>';         
             });
-            html += '</ul>';
+            html += '</ul>'; 
             document.getElementById('todo').innerHTML = html;
 
     });
