--- a/LT/Uke 5/Todolist.html
+++ b/LT/Uke 5/Todolist.html
@@ -86,7 +86,7 @@ let tasks = [
     for (let i = 0; i < tasks.length; i++) {
         html += createHtmlRow(i);
 }
-    tasksTable.innerHTML = html;
+    tasksTable.innerHTML = html;)
 }
     function createHtmlRow(i) {
         const task = tasks[i];
